# prometheus

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  index.html
.github/workflows/: ci.yml
bindings/c_cpp/: example.c
bindings/lua/: prometheus.lua
bindings/nim/: prometheus.nim
bindings/python/: prometheus.py
disassembler/: Cargo.toml
disassembler/benches/: decode_bench.rs
disassembler/src/: autogen_isa.rs  error.rs  ffi.rs  formatter.rs  isa.rs  iter.rs  lib.rs
disassembler/src/decoder/: attributes.rs  branch.rs  flags.rs  immediate.rs  implicit.rs  mod.rs  modrm.rs  opcode_resolver.rs  register.rs  session.rs  types.rs
disassembler/tests/: decoder_tests.rs  error_tests.rs  immediate_tests.rs  opcode_resolver_tests.rs  register_tests.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_loop.rs
include/: prometheus.h
scripts/: Cargo.toml  generate_isa.py  plot_benchmarks.py
scripts/src/: cli.rs  main.rs
scripts/src/generate_isa/: config.rs  decoder_tables_generator.rs  downloader.rs  generator.rs  mod.rs  models.rs  parser.rs  utils.rs
scripts/src/plot_benchmarks/: chart.rs  collector.rs  config.rs  mod.rs  models.rs  types.rs
src/: autogen_isa.rs  decoder.rs  error.rs  ffi.rs  formatter.rs  lib.rs  validator.rs
