[package]
name = "scripts"
version = "0.1.0"
edition = "2024"
license = "CC0-1.0"
rust-version = "1.94.0"

[dependencies]
log = "0.4.30"
anyhow = "1.0.102"
plotters = "0.3.7"
serde_json = "1.0.150"
serde = "1.0.228"
reqwest = { version = "0.13.4", features = ["json"] }
csv = "1.4.0"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
clap = { version = "4.4", features = ["derive", "color"] }